--- a/GameServer2/app/src/main/res/layout/activity_main.xml
+++ b/GameServer2/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="Hello, I am a server." android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <TextView android:text="&quot;Hello, I am a server.&quot;" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/" />
 
 </RelativeLayout>
